Application creation screen added

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -2,6 +2,23 @@
   "appName": "Job Trackr",
   "jobApplications": "Candidatures",
   "titleAddJob": "Ajouter une candidature",
+  "titleEditJob": "Modifier une candidature",
+  "role": "Poste",
+  "company": "Entreprise",
+  "missingCompanyName": "Veuillez indiquer le nom de l'entreprise",
+  "missingRole": "Veuillez indiquer le poste",
+  "missingStatus": "Veuillez indiquer le statut",
+  "applicationDate": "Date de candidature",
+  "opportunity": "Opportunité",
+  "location": "Localisation",
+  "flexibility": "Flexibilité",
+  "applicationStatus": "Statut",
+  "jobPostUrl": "URL de l'annonce",
+  "note": "Commentaires",
+  "applicationSaved": "Candidature enregistrée",
+  "save": "Enregistrer",
+  "cancel": "Annuler",
+  "pleaseEnter": "Merci d'ajouter: ",
   "applicationStatus_applied": "Envoyée",
   "applicationStatus_reviewed": "Examinée",
   "applicationStatus_hrInterviewing": "Entretien RH",
@@ -10,7 +27,25 @@
   "applicationStatus_accepted": "Accepté",
   "applicationStatus_ghosting": "Sans réponse",
   "applicationStatus_rejected": "Rejeté",
-  "applicationStatus_offer": "Proposition"
-
-
+  "applicationStatus_offer": "Proposition",
+  "applicationStatus_planned": "Prévue",
+  "fullTime": "Temps plein",
+  "partTime": "Temps partiel",
+  "internship": "Stage",
+  "contract": "Contrat",
+  "apprenticeship": "Alternance",
+  "temporary": "Temporaire",
+  "freelance": "Indépendant",
+  "other": "Autre",
+  "jobPost": "Offre d'emploi",
+  "referral": "Cooptation",
+  "headhunted": "Démarchage par l'entreprise",
+  "networking": "Réseautage",
+  "internalTransfer": "Transfert interne",
+  "walkIn": "Candidature spontanée",
+  "otherOpportunity": "Autre",
+  "fullRemote": "Entièrement à distance",
+  "onSite": "Sur site",
+  "hybrid": "Hybride",
+  "negotiable": "Négociable"
 }
