--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,6 +2,23 @@
   "appName": "Job Trackr",
   "jobApplications": "Job Applications",
   "titleAddJob": "Add Job Application",
+  "titleEditJob": "Edit Job Application",
+  "role": "Role",
+  "company": "Company",
+  "missingCompanyName": "Please enter company name",
+  "missingRole": "Please enter role",
+  "missingStatus": "Please set status",
+  "applicationDate": "Application date",
+  "opportunity": "Opportunity",
+  "location": "Location",
+  "flexibility": "Flexibility",
+  "applicationStatus": "Status",
+  "jobPostUrl": "Job post URL",
+  "note": "Note",
+  "applicationSaved": "Job application saved",
+  "save": "Save",
+  "cancel": "Cancel",
+  "pleaseEnter": "Please enter: ",
   "applicationStatus_applied": "Applied",
   "applicationStatus_reviewed": "Reviewed",
   "applicationStatus_hrInterviewing": "HR interviewing",
@@ -10,6 +27,25 @@
   "applicationStatus_accepted": "Accepted",
   "applicationStatus_ghosting": "Ghosting",
   "applicationStatus_rejected": "Rejected",
-  "applicationStatus_offer": "Offer"
-
+  "applicationStatus_offer": "Offer",
+  "applicationStatus_planned": "Planned",
+  "fullTime": "Full-time",
+  "partTime": "Part-time",
+  "internship": "Internship",
+  "contract": "Contract",
+  "apprenticeship": "Apprenticeship",
+  "temporary": "Temporary",
+  "freelance": "Freelance",
+  "other": "Other",
+  "jobPost": "Job Post",
+  "referral": "Referral",
+  "headhunted": "Headhunted",
+  "networking": "Networking",
+  "internalTransfer": "Internal Transfer",
+  "walkIn": "Walk-In",
+  "otherOpportunity": "Other",
+  "fullRemote": "Full Remote",
+  "onSite": "On-Site",
+  "hybrid": "Hybrid",
+  "negotiable": "Negotiable"
 }
