--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -19,6 +19,16 @@
   "save": "Enregistrer",
   "cancel": "Annuler",
   "pleaseEnter": "Merci d'ajouter: ",
+  "appliedOn": "Candidature envoyée le {applicationDate}",
+  "@appliedOn": {
+    "placeholders": {
+      "applicationDate": {
+        "type": "String"
+      }
+    }
+  },
+  "locationNotSpecified": "Localisation non spécifiée",
+  "applicationPlanned": "Candidature prévue",
   "applicationStatus_applied": "Envoyée",
   "applicationStatus_reviewed": "Examinée",
   "applicationStatus_hrInterviewing": "Entretien RH",
