Job application cart refactored

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -54,7 +54,7 @@
   "internalTransfer": "Transfert interne",
   "walkIn": "Candidature spontanée",
   "otherOpportunity": "Autre",
-  "fullRemote": "Entièrement à distance",
+  "fullRemote": "A distance",
   "onSite": "Sur site",
   "hybrid": "Hybride",
   "negotiable": "Négociable"
