Job application cart refactored

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -19,7 +19,7 @@
   "save": "Enregistrer",
   "cancel": "Annuler",
   "pleaseEnter": "Merci d'ajouter: ",
-  "appliedOn": "Candidature envoyée le {applicationDate}",
+  "appliedOn": "Envoyée le {applicationDate}",
   "@appliedOn": {
     "placeholders": {
       "applicationDate": {
